Testing the Workflows

--- a/os/ubuntu/Dockerfile
+++ b/os/ubuntu/Dockerfile
@@ -1,7 +1,9 @@
-FROM ubuntu:latest
+ARG IMAGE_VERSION=latest
+FROM ubuntu:$IMAGE_VERSION
 LABEL org.opencontainers.image.description="" \
       org.opencontainers.image.authors="Nikolay Kostov (https://www.linkedin.com/in/nikolay-kostov-689364131/)" \
       org.opencontainers.image.url="" \
       org.opencontainers.image.documentation="" \
       org.opencontainers.image.source=""
+
 # Add any specific configurations or packages here
