--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -48,8 +48,14 @@ commands:
         default: "latest"
         type: string
         steps:
-          - run: docker build -t alpine #--tag "" -f /os/alpine/Dockerfile
-          - run: docker tag alpine docker.pkg.github.com/nickkostov/Dockerfiles/alpine:latest
+          - run:
+              name: Build Docker Image
+              command: | 
+                docker build -t alpine #--tag "" -f /os/alpine/Dockerfile
+          - run:
+              name: Tag Docker Image
+              command: |
+                docker tag alpine docker.pkg.github.com/nickkostov/Dockerfiles/alpine:latest
 
 #  docker-push:
 #    steps:
