--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -43,19 +43,19 @@ parameters:
 
 commands:
   docker-build:
-    parameters:
-      version:
-        default: "latest"
-        type: string
-        steps:
-          - run:
-              name: Build Docker Image
-              command: | 
-                docker build -t alpine #--tag "" -f /os/alpine/Dockerfile
-          - run:
-              name: Tag Docker Image
-              command: |
-                docker tag alpine docker.pkg.github.com/nickkostov/Dockerfiles/alpine:latest
+    #parameters:
+    #  version:
+    #    default: "latest"
+    #    type: string
+    steps:
+      - run:
+          name: Build Docker Image
+          command: | 
+            docker build -t alpine #--tag "" -f /os/alpine/Dockerfile
+      - run:
+          name: Tag Docker Image
+          command: |
+            docker tag alpine docker.pkg.github.com/nickkostov/Dockerfiles/alpine:latest
 
 #  docker-push:
 #    steps:
