fixing names for test

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -61,7 +61,7 @@ commands:
 #    steps:
 
 jobs:
-  build-alpine:
+  docker-build-alpine:
     executor: docker-publisher
     steps:
       - checkout
