--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -42,19 +42,25 @@ executors:
 
 commands:
   docker-build:
-    #parameters:
-    #  version:
-    #    default: "latest"
-    #    type: string
+    parameters:
+      version:
+        default: "latest"
+        type: string
+      path:
+        default: "/os/alpine"
+        type: string
+      image_os:
+        default: "alpine"
+        type: string
     steps:
       - run:
           name: Build Docker Image
           command: | 
-            docker build -t alpine #--tag "" -f /os/alpine/Dockerfile
+            docker build -t alpine:<<parameters.version>>  -f <<parameters.path>>/Dockerfile
       - run:
           name: Tag Docker Image
           command: |
-            docker tag alpine docker.pkg.github.com/nickkostov/Dockerfiles/alpine:latest
+            docker tag alpine:<<parameters.version>> docker.pkg.github.com/nickkostov/Dockerfiles/<<parameters.image_os>>:latest
 
 #  docker-push:
 #    steps:
