the persisting is going to work, i picked the wrong file 😅

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -67,7 +67,7 @@ commands:
       - persist_to_workspace:
           root: .
           paths:
-            - ./image.tar
+            - <<parameters.image_os>>_<<parameters.version>>.tar
 #  docker-push:
 #    steps:
 
