--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -153,7 +153,7 @@ workflows:
           version: "latest"
           path: "os/alpine"
           image_os: "alpine"
-      - deploy-approval:
+      - push-approval:
           <<: *master_only
           name: 'Approval Gate'
           type: approval
