--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -88,7 +88,7 @@ commands:
       - run:
           name: Publish Docker image
           command: |
-            echo "${DOCKERHUB_PASS}" | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin
+            echo "${DOCKERHUB_PASS}" | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin docker.pkg.github.com
             docker push "<<parameters.image_os>>:<<parameters.version>>"
 
 jobs:
