--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -89,6 +89,7 @@ commands:
           name: Publish Docker image
           command: |
             echo "${DOCKERHUB_PASS}" | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin docker.pkg.github.com
+            docker tag <<parameters.image_os>>:<<parameters.version>> docker.pkg.github.com/nickkostov/dockerfiles/<<parameters.image_os>>:latest
             docker push "docker.pkg.github.com/nickkostov/dockerfiles/<<parameters.image_os>>:latest"
 
 jobs:
