testing all images

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -126,6 +126,7 @@ jobs:
         default: "alpine"
         type: string
     steps:
+      - checkout
       - setup_remote_docker
       - docker-push
 
