--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -128,7 +128,10 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - docker-push
+      - docker-push:
+          version: <<parameters.version>>
+          path: <<parameters.path>>
+          image_os: <<parameters.image_os>>
 
 # WORKFLOWS
 workflows:
