Push Of my docker images

--- a/os/alpine/Dockerfile
+++ b/os/alpine/Dockerfile
@@ -2,8 +2,8 @@ ARG IMAGE_VERSION=latest
 FROM alpine:$IMAGE_VERSION
 LABEL org.opencontainers.image.description="" \
       org.opencontainers.image.authors="Nikolay Kostov (https://www.linkedin.com/in/nikolay-kostov-689364131/)" \
-      org.opencontainers.image.url="" \
-      org.opencontainers.image.documentation="" \
-      org.opencontainers.image.source=""
+      org.opencontainers.image.url="ghcr.io/nickkostov/dockerfiles/alpine:latest" \
+      org.opencontainers.image.documentation="https://github.com/nickkostov/dockerfiles/os/alpine/README.md" \
+      org.opencontainers.image.source="https://github.com/nickkostov/dockerfiles/os/alpine"
 
 # Add any specific configurations or packages here
