--- a/os/centos/Dockerfile
+++ b/os/centos/Dockerfile
@@ -2,8 +2,7 @@ ARG IMAGE_VERSION=latest
 FROM centos:$IMAGE_VERSION
 LABEL org.opencontainers.image.description="" \
       org.opencontainers.image.authors="Nikolay Kostov (https://www.linkedin.com/in/nikolay-kostov-689364131/)" \
-      org.opencontainers.image.url="" \
-      org.opencontainers.image.documentation="" \
-      org.opencontainers.image.source=""
-
+      org.opencontainers.image.url="ghcr.io/nickkostov/dockerfiles/centos:latest" \
+      org.opencontainers.image.documentation="https://github.com/nickkostov/dockerfiles/os/centos/README.md" \
+      org.opencontainers.image.source="https://github.com/nickkostov/dockerfiles/os/centos"
 # Add any specific configurations or packages here
