--- a/os/alpine/Dockerfile
+++ b/os/alpine/Dockerfile
@@ -7,3 +7,8 @@ LABEL org.opencontainers.image.description="" \
       org.opencontainers.image.source="https://github.com/nickkostov/dockerfiles/os/alpine"
 
 # Add any specific configurations or packages here
+
+RUN apk add --update --no-cache python3 \ 
+&& ln -sf python3 /usr/bin/python \
+&& python3 -m ensurepip && \
+pip3 install --no-cache --upgrade pip setuptools
