--- a/os/alpine/Dockerfile
+++ b/os/alpine/Dockerfile
@@ -8,7 +8,4 @@ LABEL org.opencontainers.image.description="" \
 
 # Add any specific configurations or packages here
 
-RUN apk add --update --no-cache python3 \ 
-&& ln -sf python3 /usr/bin/python \
-&& python3 -m ensurepip && \
-pip3 install --no-cache --upgrade pip setuptools
+RUN apk add --update --no-cache python3
