update added to deb apt env

--- a/os/debian/Dockerfile
+++ b/os/debian/Dockerfile
@@ -7,4 +7,5 @@ LABEL org.opencontainers.image.description="" \
       org.opencontainers.image.source="https://github.com/nickkostov/dockerfiles/os/debian"
 
 # Add any specific configurations or packages here
-RUN apt install apache2 -y
+RUN  apt update && \
+apt install apache2 -y
