--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ workflows:
   setup-workflow:
     jobs:
       - path-filtering/filter:
+          resource_class: nickkostov/docker-machine
           base-revision: master
           config-path: .circleci/continue_config.yml
           mapping: |
